--- a/AmIReady.html
+++ b/AmIReady.html
@@ -75,7 +75,30 @@
 	responsibilities of pet ownership before they got the animal. Please, don't make the same mistake.<br>
 	Think before you adopt.</p>	
 <br>
+<table>
+  <tr>
+    <th>Category</th>
+    <th>point range</th>
+    <th>Results</th>
+  </tr>
+  <tr>
+    <td>Ready!</td>
+    <td>9 points</td>
+    <td>questions have been asked and it seems you're ready for a new member of the family</td>
+  </tr>
+  <tr>
+    <td>Mmh..Maybe</td>
+    <td>8-7 points</td>
+    <td>Let's analyze then fix what exactly we can do gain the missing points before adopting a pet. Remember thier just like kids so they needs lots of love and attention.</td>
+  </tr>
+  <tr>
+    <td>Not yet</td>
+    <td>6 points and below</td>
+    <td>Based on your results you are not ready to adopt a pet just yet, lets wait a few years below a furry pet.</td> 
+  </tr>
+</table>
 
+<br>
 <p align="center">
 	<br>For any questions, comments, and/or concerns on this site please feel free to contact Harold Burgos via
 	<a href="mailto:haroldjburgos@gmail.com?
