--- a/AmIReady.html
+++ b/AmIReady.html
@@ -28,6 +28,9 @@
  
 <img src="AmIReady.jpg" alt="AmIReady">	
 <br>
+<p align="center">For this site please answer the questions above and if you feel you can answer the question in a positive manner <br>
+	then lets add a point to your self. If not then do NOT add a point to your score. compare your results to table at the bottom of the page.<br>
+	</p>
   <h2 align="center">Why do you want a pet? </h2>
    <p align="center">It's amazing how many people fail to ask themselves this simple question before they get pets.<br>
 	    Adopting a pet just because it's "the thing to do" or because the kids have been pining for a puppy<br>
