--- a/AmIReady.html
+++ b/AmIReady.html
@@ -8,7 +8,7 @@
 	
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-<script>	
+<style>	
 table {
     font-family: arial, sans-serif;
     border-collapse: collapse;
@@ -24,7 +24,7 @@ td, th {
 tr:nth-child(even) {
     background-color: #dddddd;
 }
-	</script>
+	</style>
 </head>
 
 <body>
