--- a/AmIReady.html
+++ b/AmIReady.html
@@ -41,7 +41,7 @@ tr:nth-child(even) {
 </div> 
 	
 	
-<h1 align="center">Am I Ready</h1>
+<h1 align="center">Am I Ready Survey</h1>
  
 <img src="AmIReady.jpg" alt="AmIReady">	
 <br>
