--- a/AmIReady.html
+++ b/AmIReady.html
@@ -45,7 +45,7 @@ tr:nth-child(even) {
  
 <img src="AmIReady.jpg" alt="AmIReady">	
 <br>
-<p align="center">For this site please answer the questions above and if you feel you can answer the question in a positive manner <br>
+<p align="center">For this site please answer the questions below and if you feel you can answer the question in a positive manner <br>
 	then lets add a point to your self. If not then do NOT add a point to your score. compare your results to table at the bottom of the page.<br>
 	</p>
   <h2 align="center">Why do you want a pet? </h2>
