--- a/AmIReady.html
+++ b/AmIReady.html
@@ -114,7 +114,7 @@ tr:nth-child(even) {
   <tr>
     <td>Not yet</td>
     <td>6 points and below</td>
-    <td>Based on your results you are not ready to adopt a pet just yet, lets wait a few years below a furry pet.</td> 
+    <td>Based on your results you are not ready to adopt a pet just yet, lets wait a few years getting a furry Friend.</td> 
   </tr>
 </table>
 
